# m2-cross

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README.md  configure  configure.ac  version.c
bare-metal-m2/: armc-08-cstartup.c  armc-08-start.S  buildc  buildm2  flashled328.mod  kernel.elf  kernel.img  ledtest.mod  ledtest2.c  ledtest2.mod  linker.ld  main.c  minavr.mod  silent.mod
bare-metal-m2/doc/: bare-metal-m2.ms
gnu-linux/: hello.mod
patches/glibc-2.34/: 01-posix-warning.patch
shell/: build-cross-arm.sh  build-cross-avr.sh  build-cross-gcc.sh
tmac/: gp.tmac
